# ViT-explainability-approximated-LRP

./: .gitignore  README.md  main.py  pyproject.toml
baselines/ViT/: CLIP_LRP.py  DINOv2_LRP.py  ViT_LRP.py  ViT_explanation_generator.py  helpers.py
modules/: layers_ours.py
